@@ -3,6 +3,7 @@
 CHANGELOG for Media module.
 ===========================
 
+by aaron: Attach subtab behaviors.
 by aaron: Temporarily hardcode load media youtube js in browser.
 by aaron: Integrate browser w/ optional Styles module.
 by aaron: Add get_parameters to remote stream wrapper.
